<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MBC_Pixsello</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="lost_found">LOST &amp; FOUND</string>
    <string name="contact_details">CONTACT DETAILS</string>
    <string name="guest_visitor">GUEST VISITOR</string>
    <string name="attantaion">ACTION REQUIRED</string>
    <string name="training_updates">TRAINING UPDATES</string>
    <string name="payment_details">PAYMENT DETAILS</string>
    <string name="report_item">REPORT AN ITEM</string>
    <string name="find_item">FIND AN ITEM</string>
    <string name="add_item">ADD AN ITEM</string>
    <string name="lbl_description">Description of Item </string>
    <string name="lbl_location">Location Where Found</string>
    <string name="lbl_room_num">Room No</string>
    <string name="lbl_staff">Staff Who Found It</string>
    <string name="lbl_date_guest_stay">Approx Date of Guest Stay</string>
    <string name="lbl_request_visitors">REQUEST OF GUEST VISITORS</string>
    <string name="lbl_make_in">MAKE IN-TIME ENTRIES</string>
    <string name="lbl_make_out">MAKE OUT-TIME ENTRIES</string>
    <string name="lbl_past_visitors">SEE PAST VISITORS</string>
    <string name="lbl_lost_found">LOST &amp; FOUND REGISTER</string>
    <string name="lbl_guest_name">Guest Name</string>
    <string name="lbl_company">Company</string>
    <string name="lbl_visiting_guest_name">Visiting Guest Name</string>
    <string name="lbl_Gendar">Gender</string>
    <string name="lbl_manager_controls">MANAGER BOOK OF CONTROLS</string>
    <string name="lbl_emergency_number">EMERGENCY NUMBER</string>
    <string name="lbl_vendor_number">VENDORS NUMBER</string>
    <string name="lbl_search">SEARCH</string>
    <string name="lbl_services">Services Description</string>
    <string name="lbl_action">ACTION REQUIRED</string>
    <string name="lbl_contact_person">Contact Person</string>
    <string name="lbl_contact_number">Contact Number</string>
    <string name="lbl_add_item">ADD ITEM</string>
    <string name="lbl_see_active_list">SEE ACTIVE LIST</string>
    <string name="lbl_list_closed">SEE LIST OF CLOSED ITEMS</string>
    <string name="lbl_dispersion">Dispersion with quality</string>
    <string name="lbl_where">Where</string>
    <string name="lbl_reported">Reported By</string>
    <string name="lbl_responsibility">Responsibility</string>
    <string name="lbl_training">TRAINING UPDATES</string>
    <string name="lbl_update">UPDATE</string>
    <string name="lbl_staff_profile">STAFF PROFILE</string>
    <string name="lbl_videos">TRAINING VIDEOS</string>
    <string name="lbl_trainee">Trainee</string>
    <string name="lbl_trainer">Trainer</string>
    <string name="lbl_type">Type</string>
    <string name="lbl_time_training">Duration of Training</string>
    <string name="lbl_trainee_assessment">Trainee Assessment</string>
    <string name="title_activity_lost_and_found">LostAndFoundActivity</string>
    <string name="title_activity_contact_details">ContactDetailsActivity</string>
    <string name="title_activity_guest_visitor">GuestVisitorActivity</string>
    <string name="title_activity_action_required">ActionRequiredActivity</string>
    <string name="title_activity_training_updates">TrainingUpdatesActivity</string>
    <string name="title_activity_payment_details">PaymentDetailsActivity</string>
    <string name="title_activity_report_item">ReportItemActivity</string>
    <string name="title_activity_find_item">FindItemActivity</string>
    <string name="title_activity_make_in_entry">MakeInEntryActivity</string>
    <string name="title_activity_make_out_entry">MakeOutEntryActivity</string>
    <string name="title_activity_past_visitors">PastVisitorsActivity</string>
    <string name="title_activity_add_contact_number">AddContactNumberActivity</string>
    <string name="title_activity_emergency_numbers">EmergencyNumbersActivity</string>
    <string name="title_activity_add_item">AddItemActivity</string>
    <string name="title_activity_training">TrainingActivity</string>
    <string name="title_activity_update">UpdateActivity</string>
    <string name="title_activity_staff_profile">StaffProfileActivity</string>
    <string name="title_activity_training_videos">TrainingVideosActivity</string>
    <string name="title_activity_active_items_list">ActiveItemsListActivity</string>
    <string name="title_activity_closed_items">ClosedItemsActivity</string>
    <string name="valid_input">1,2,3,4,5,6,7,8,9,qwertzuiopasdfghjklyxcvbnm1</string>
    
    <string-array name="search_options">
        <item>Service Description</item>
        <item>Contact Person</item>
        <item>Contact Number</item>
    </string-array>
    <string-array name="training_types">
        <item>Long Term</item>
        <item>Short Term</item>
        <item>Week</item>
        <item>Other</item>
    </string-array>
    <string-array name="payment_types">
        <item>Month</item>
        <item>Quater</item>
        <item>Year</item>
    </string-array>
    <string-array name="staff_search_types">
        <item>Trainer</item>
        <item>Trainee</item>
        <item>Type</item>
    </string-array>
    <string-array name="training_hours">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="training_mins">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
    </string-array>
    <string-array name="assessment">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string name="title_activity_add_services">AddServicesActivity</string>
    <string name="title_activity_update_new_bill">UpdateNewBIllActivity</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="title_activity_payment_status">PaymentStatusActivity</string>
    <string name="title_activity_payment_search">PaymentSearchActivity</string>
    <string name="title_activity_aparangi">AparangiActivity</string>
    <string name="title_activity_employee_details">EmployeeDetailsActivity</string>
    <string name="title_activity_employment_details">EmploymentDetailsActivity</string>
    <string name="title_activity_assessment">AssessmentActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_employee_search">EmployeeSearchActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_image_preview">ImagePreviewActivity</string>
    <string name="title_activity_feedback_details">FeedbackDetailsActivity</string>
    <string name="title_activity_add_new_feedback">AddNewFeedbackActivity</string>
    <string name="title_activity_previous_feedback">PreviousFeedbackActivity</string>
    <string name="title_activity_video_player">VideoPlayerActivity</string>

</resources>